# tugas-akhir

./: .gitignore  .gitkeep_dirs  ABLATION_PLAN.md  ABLATION_RESULTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  CONTRASTIVE_LOSS_RESEARCH.md  CWE_DATASET_ANALYSIS.md  DATASET_ANALYSIS.md  FUNC_LINE_ANALYSIS.md  FUNC_TOKEN_ANALYSIS.md  LOSS_F1_GAP.md  MULTICLASS_TECHNIQUES.md  NODE_COUNT_ANALYSIS.md  OWASP.md  PERF_PLAN.md  PHASE1_ANALYSIS.md  README.md  RELATED_PAPERS.md  RESULTS_COMPARISON.md  RUNNING.md  TOP_CWE.md  pyproject.toml
configs/: TEMPLATE.yaml  default.yaml
configs/data/: bigvul_multiclass_cwe10_node-codet5p_func-codet5p.yaml  bigvul_multiclass_cwe10_node-codet5p_func-unixcoder.yaml  bigvul_multiclass_cwe10_node-unixcoder_func-codet5p.yaml  bigvul_multiclass_cwe10_node-unixcoder_func-unixcoder.yaml  bigvul_multiclass_owasp.yaml  bigvul_multiclass_owasp_codet5p.yaml  bigvul_multiclass_owasp_jina.yaml  bigvul_multiclass_owasp_node-codet5p_func-codet5p.yaml  bigvul_multiclass_owasp_node-codet5p_func-unixcoder.yaml  bigvul_multiclass_owasp_node-unixcoder_func-codet5p.yaml  bigvul_multiclass_owasp_node-unixcoder_func-jina.yaml  bigvul_multiclass_owasp_node-unixcoder_func-unixcoder.yaml  (+50 more)
scripts/: analyze_cwe_tree.py  analyze_dataset.py  analyze_func_lines.py  analyze_func_tokens.py  analyze_node_counts.py  cloud_process_datasets.sh  convert_raw_to_hdf5.py  download_convert_lazy_upload.ps1  download_datasets.py  export_linevul.py  local_process_and_upload.ps1  merge_datasets.py  patch_and_upload_titanvul.ps1  patch_meta_raw_func.py  patch_pt_add_func.py  patch_pt_add_raw_func.py  patch_pt_deoffset_edge_index.py  patch_pt_inject_parquet_id.py  patch_pt_reindex_labels.py  patch_raw_multilang.py  prepare_all.ps1  prepare_dataset.py  process_dataset.py  setup_cloud.sh  test_losses_vectorized.py  test_stmthead_vectorized.py  train_cloud.sh  update_pt_groups.py  upload_checkpoints.ps1  upload_raw_datasets.ps1
tests/: test_graph_builder.py  test_models.py  test_preprocess.py
(+186 files in other folders)
