[project]
name = "gnn-vuln"
version = "0.1.0"
description = "GNN-based vulnerability detection for code — Final Project (Tugas Akhir)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Otzzu" }]

dependencies = [
    # Deep learning
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    # Graph neural networks (PyTorch Geometric)
    "torch-geometric>=2.5.0",
    # Graph utilities
    "networkx>=3.3",
    # Data science
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    # Visualisation
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # Progress & config
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    # Parsing (AST extraction helper)
    "tree-sitter>=0.23.0",
    "tree-sitter-c>=0.23.0",
    # Logging
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
train = "gnn_vuln.train:main"
evaluate = "gnn_vuln.evaluate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnn_vuln"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# NOTE: PyTorch Geometric sparse extensions (torch-scatter, torch-sparse)
# require matching torch+cpu wheels. Install them AFTER `uv sync` with:
#   uv run pip install torch-scatter torch-sparse -f https://data.pyg.org/whl/torch-2.2.0+cpu.html
# (See README.md Quick Start for full instructions.)
